--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 ## Directory-based project format:
 .idea/
 # if you remove the above rule, at least ignore the following:
+.vscode/
 
 # User-specific stuff:
 # .idea/workspace.xml
