--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 # if you remove the above rule, at least ignore the following:
 .vscode/
 
+__pycache_/
+
 # User-specific stuff:
 # .idea/workspace.xml
 # .idea/tasks.xml
