--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ PyDispatcher==2.0.5
 PyHamcrest==1.9.0
 pyOpenSSL==18.0.0
 queuelib==1.5.0
+redis==3.0.1
 requests==2.20.1
 Scrapy==1.5.1
 service-identity==17.0.0
