--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ queuelib==1.5.0
 redis==3.0.1
 requests==2.20.1
 Scrapy==1.5.1
+selenium==3.141.0
 service-identity==17.0.0
 six==1.11.0
 smmap2==2.0.5
