--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asn1crypto==0.24.0
+atomicwrites==1.2.1
 attrs==18.2.0
 Automat==0.7.0
 beautifulsoup4==4.6.3
@@ -15,10 +16,12 @@ idna==2.7
 incremental==17.5.0
 Logbook==1.4.1
 lxml==4.2.5
+more-itertools==4.3.0
 numpy==1.15.4
 opencv-python==3.4.4.19
 parsel==1.5.1
 Pillow==5.3.0
+pluggy==0.8.0
 py==1.7.0
 pyasn1==0.4.4
 pyasn1-modules==0.2.2
@@ -26,6 +29,7 @@ pycparser==2.19
 PyDispatcher==2.0.5
 PyHamcrest==1.9.0
 pyOpenSSL==18.0.0
+pytest==4.0.1
 queuelib==1.5.0
 redis==3.0.1
 requests==2.20.1
