--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ selenium==3.141.0
 service-identity==17.0.0
 six==1.11.0
 smmap2==2.0.5
+termcolor==1.1.0
 Twisted==18.9.0
 urllib3==1.24.1
 w3lib==1.19.0
