--- a/translator/pytranslator/.gitignore
+++ b/translator/pytranslator/.gitignore
@@ -9,7 +9,9 @@
 
 venvpy/
 __pycache_/
-
+build/
+dist/
+karkipytranslator.egg-info/
 # User-specific stuff:
 # .idea/workspace.xml
 # .idea/tasks.xml
