--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,14 @@ atomicwrites==1.2.1
 attrs==18.2.0
 Automat==0.7.0
 beautifulsoup4==4.6.3
+bleach==3.0.2
 certifi==2018.10.15
 cffi==1.11.5
 chardet==3.0.4
 constantly==15.1.0
 cryptography==2.4.2
 cssselect==1.0.3
+docutils==0.14
 futures==3.1.1
 gitdb2==2.0.5
 GitPython==2.1.11
@@ -23,26 +25,33 @@ numpy==1.15.4
 opencv-python==3.4.4.19
 parsel==1.5.1
 Pillow==5.3.0
+pkginfo==1.4.2
 pluggy==0.8.0
 py==1.7.0
 pyasn1==0.4.4
 pyasn1-modules==0.2.2
 pycparser==2.19
 PyDispatcher==2.0.5
+Pygments==2.3.1
 PyHamcrest==1.9.0
 pyOpenSSL==18.0.0
 pytest==4.0.1
 queuelib==1.5.0
+readme-renderer==24.0
 redis==3.0.1
 requests==2.20.1
+requests-toolbelt==0.8.0
 Scrapy==1.5.1
 selenium==3.141.0
 service-identity==17.0.0
 six==1.11.0
 smmap2==2.0.5
 termcolor==1.1.0
+tqdm==4.28.1
+twine==1.12.1
 Twisted==18.9.0
 urllib3==1.24.1
 w3lib==1.19.0
+webencodings==0.5.1
 websockets==7.0
 zope.interface==4.6.0
