--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,21 @@
+argcomplete==1.8.2
 asn1crypto==0.24.0
 atomicwrites==1.2.1
 attrs==18.2.0
 Automat==0.7.0
-beautifulsoup4==4.6.3
+beautifulsoup4==4.5.3
 bleach==3.0.2
 certifi==2018.10.15
 cffi==1.11.5
-chardet==3.0.4
+chardet==2.3.0
+Click==7.0
 constantly==15.1.0
 cryptography==2.4.2
 cssselect==1.0.3
 docutils==0.14
+docx2txt==0.6
+EbookLib==0.15
+Flask==1.0.2
 futures==3.1.1
 gitdb2==2.0.5
 GitPython==2.1.11
@@ -18,9 +23,13 @@ goslate==1.5.1
 hyperlink==18.0.0
 idna==2.7
 incremental==17.5.0
+itsdangerous==1.1.0
+Jinja2==2.10.1
 Logbook==1.4.1
 lxml==4.2.5
+MarkupSafe==1.1.1
 more-itertools==4.3.0
+nltk==3.4
 numpy==1.15.4
 opencv-python==3.4.4.19
 parsel==1.5.1
@@ -35,7 +44,9 @@ PyDispatcher==2.0.5
 Pygments==2.3.1
 PyHamcrest==1.9.0
 pyOpenSSL==18.0.0
+PyPDF2==1.26.0
 pytest==4.0.1
+python-pptx==0.6.5
 queuelib==1.5.0
 readme-renderer==24.0
 redis==3.0.1
@@ -44,9 +55,10 @@ requests-toolbelt==0.8.0
 Scrapy==1.5.1
 selenium==3.141.0
 service-identity==17.0.0
-six==1.11.0
+singledispatch==3.4.0.3
+six==1.10.0
 smmap2==2.0.5
-SpeechRecognition==3.8.1
+SpeechRecognition==3.6.3
 termcolor==1.1.0
 tqdm==4.28.1
 twine==1.12.1
@@ -55,4 +67,7 @@ urllib3==1.24.1
 w3lib==1.19.0
 webencodings==0.5.1
 websockets==7.0
+Werkzeug==0.15.2
+xlrd==1.0.0
+XlsxWriter==1.1.2
 zope.interface==4.6.0
