--- a/requirements.txt
+++ b/requirements.txt
@@ -63,7 +63,7 @@ termcolor==1.1.0
 tqdm==4.28.1
 twine==1.12.1
 Twisted==18.9.0
-urllib3==1.24.1
+urllib3>=1.24.2
 w3lib==1.19.0
 webencodings==0.5.1
 websockets==7.0
