--- a/requirements.txt
+++ b/requirements.txt
@@ -62,7 +62,7 @@ SpeechRecognition==3.6.3
 termcolor==1.1.0
 tqdm==4.28.1
 twine==1.12.1
-Twisted==18.9.0
+twisted>=19.2.1
 urllib3>=1.24.2
 w3lib==1.19.0
 webencodings==0.5.1
