--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,8 +1,6 @@
 name: Pull Request
 
-on:
-  pull_request:
-    type: [closed]
+on: [pull_request]
 
 jobs:
   build:
@@ -11,10 +9,11 @@ jobs:
       matrix:
         python-version: [3.x]
     steps:
+    - uses: actions/checkout@master
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        echo 'hello'
+        echo 'run linters'
