--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -1,22 +1,18 @@
-name: Tag Creation on any
+name: Tag creation check
+
 on:
   create:
     tags:
-      - pyk@*
+      - call-break@*
     branches:
-      - any
+      - master
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.x]
     steps:
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+    - name: npm install, build, and test
       run: |
-        echo 'run on any'
+        echo 'tag creation runs '
+      env:
+        CI: true
