--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,11 +1,6 @@
 name: Tag creation check
 
-on:
-  create:
-    tags:
-      - call-break@*
-    branches:
-      - master
+on: [pull_request]
 
 jobs:
   build:
